chef-openstack-liberty/cookbooks/lac-iptables/templates/default/griffin/iptables.conf.ceph-s3.conf
# This is quick and dirty and created by ray on 20160211
## PLease review before pushing out to s3 gateways
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DNS - [0:0]

# accept opened connections
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

#Allow in radosgw
-A INPUT -i p17p1.3523 -p tcp --dport 443 -j ACCEPT

#Drop all on this interface
-A INPUT -i p17p1.3523 -j DROP


# allow full privnet access
-A INPUT -s 10.24.0.0/16 -j ACCEPT
-A OUTPUT -d 10.24.0.0/16 -j ACCEPT

#allow monitoriting
-A INPUT  -s 10.103.110.249 -j ACCEPT
-A OUTPUT  -d 10.103.110.249 -j ACCEPT
-A INPUT  -s 10.8.0.21 -j ACCEPT
-A OUTPUT  -d 10.8.0.21 -j ACCEPT
-A INPUT -pudp -mudp -s 10.103.110.249 -j ACCEPT
-A INPUT -pudp -mudp --dport 161 -j REJECT



# allow ssh access
-A INPUT -m tcp -p tcp --dport 22 -j ACCEPT
-A OUTPUT -m tcp -p tcp  --dport 22  -j ACCEPT
-A OUTPUT -m tcp -p tcp  --sport 22  -j ACCEPT

# accept anything on loopback
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

#DNS
-A OUTPUT -p tcp -m tcp --dport 53 -j DNS
-A OUTPUT -p udp -m udp --dport 53 -j DNS

-A DNS -d 10.8.0.21 -j ACCEPT
-A DNS -d 10.8.0.21 -j ACCEPT
-A DNS -d 192.170.228.84 -j ACCEPT
-A DNS -d 192.170.228.88 -j ACCEPT

COMMIT
